--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@copilotkit/react-core": "^1.7.1",
+    "@copilotkit/react-ui": "^1.7.1",
     "@mendable/firecrawl-js": "^1.19.1",
     "node-fetch": "^3.3.2",
     "puppeteer": "^24.4.0"
